# api/swagger.yaml
@@ -310,6 +310,45 @@ paths:
         400:
           description: "Bad request."
       x-swagger-router-controller: "Books"
+  /authors:
+    get:
+      tags:
+        - "Authors"
+      summary: "Returns a list of all the authors."
+      operationId: "authorsGET"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "offset"
+          in: "query"
+          description: "Offset with regards to the current page."
+          required: false
+          type: "integer"
+          default: 0
+          format: "int64"
+        - name: "limit"
+          in: "query"
+          description: "Items per page."
+          required: false
+          type: "integer"
+          default: 20
+          format: "int64"
+      responses:
+        200:
+          description: "A list of names, surnames and imgpath of all the authors in the database"
+          schema:
+            type: "array"
+            items:
+              type: "object"
+              properties:
+                author_id:
+                  type: "integer"
+                  format: "int64"
+                author:
+                  $ref: "#/definitions/Author"
+        400:
+          description: "Bad request."
+      x-swagger-router-controller: "Authors"
   /authors/{author_id}:
     get:
       tags:
